# password-manager-cli-tool

./: Cargo.toml  README.md
src/: main.rs
src/commands/: add.rs  change_password.rs  delete.rs  get.rs  init.rs  list.rs  mod.rs  search.rs  status.rs
src/helper/: mod.rs  non_empty_input.rs
src/models/: credential.rs
src/storage/: file.rs
src/utils/: crypto.rs  generator.rs  mod.rs
