[package]
name = "password_manager_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"]}
clipboard = "0.5.0"
dirs = "6.0.0"
prettytable = "0.10.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
zeroize = { version = "1.8.1", features = ["serde"] }
